--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.php",
   "dependencies": {
+    "postcss": "^8.4.5",
     "tailwindcss": "^3.0.12"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx tailwindcss -i input.css -o output.css --watch"
   },
   "author": "M Rifki W",
   "license": "ISC"
